fix a minor alignment issue

--- a/src/css/profile/profile-shared.less
+++ b/src/css/profile/profile-shared.less
@@ -23,13 +23,17 @@
       @media (max-width: @screen-xs-max) {
         padding-top: 5px;
       }
+      a {
+        margin-left: 5px;
+        margin-right: 0;
+      }
     }
   }
 
   .buttons a {
     display: block;
     float: left;
-    margin-left: 5px;
+    margin-right: 5px;
     .rounded-button;
   }
 
